# lsa-markus

./: .gitignore  README_PIPELINE.md  SETUP_COMPLETE.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  chinese_stopwords.txt  parameters.yml
corpus/: 2006-2015.json  2006-2015.txt  2016~2025.json  2016~2025.txt
data/01_raw/: 2006-2015.json  2016~2025.json
data/02_intermediate/: combined_corpus.pkl  preprocessed_2006_2015.pkl  preprocessed_2016~2025.pkl
data/03_primary/: tfidf_matrix_2006_2015.pkl  tfidf_matrix_2016~2025.pkl  tfidf_vectorizer.pkl  tfidf_vectorizer_2016_2025.pkl
data/06_models/: lda_model_2006_2015.pkl  lda_model_2016~2025.pkl  lsa_model_2006_2015.pkl  lsa_model_2016~2025.pkl
data/07_model_output/: lda_results_2006_2015.pkl  lda_results_2016~2025.pkl  lsa_results_2006_2015.pkl  lsa_results_2016~2025.pkl
notebooks/: 01_visualize_results.ipynb
notes/: LDA_Diriclete_Beta_Distribution_thinking.md  LDA_INFERENCE_METHOD.md  LSA_LDA_QUICK_SUMMARY.md  LSA_vs_LDA_COMPARISON.md  PIPELINE_FLOW_COMPARISON.md  QUICK_REFERENCE.md  __basic_.md  __historic_.md  __kedro_viz_jnb.md  __topics_change.md  how_top_terms_are_formed.md  lsa_and_cosine_simularity.md  randomized_arpack.md  reserach_goal.md  topic_selection_best_practices.md  use_explained_variance_to_choice_topics.md
scripts/: setup_and_test.sh
src/: analyze_topic_selection.py  compare_lsa_lda.py  convert_to_json.py  view_topic_term_matrix.py  visualize_pkl.py
src/lsa_markus/: __init__.py  (+3 more)
thesis/: 語義分析：以三大報系尖石的新聞報導為例.docx  附錄一_2006-2015尖石新聞報導內容.docx  附錄二_2016-2025尖石新聞報導內容.docx
(+18 files in other folders)
