[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "lsa_markus"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
lsa-markus = "lsa_markus.__main__:main"

[tool.kedro]
package_name = "lsa_markus"
project_name = "lsa-markus"
kedro_init_version = "1.1.1"
tools = [ "None",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "lsa_markus.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "adb6b9eb5b5e4109afc7b4c07db8123d"
